Added feature, fixed bug, and cleaned up code. Added: - Add new or find existing Complexity note. Included trigram in template. - 'Quick Nav' pre text to indicate custom menu - Modified style: button margin reduced Bug fix: - Custom menu should not appear on other 'tr' elements under #RvAcnHdr. - Added event _DIALOG_LAYER event listener on load if div loaded, opposed to only when dynamically added (before).

--- a/css/scp_mod.css
+++ b/css/scp_mod.css
@@ -6,15 +6,26 @@
 	margin-right : -12px;
 }
 #cust_menu a{
-	margin-right : 6px;
+	margin-right : 4px;
 	border-color : #0394bf !important;
 	width : 14px !important;
 }
 #cust_menu a:hover{
 	border-color : #bfbfbf !important;
 }
+#cust_menu pre{
+    position: absolute;
+    margin-left: -65px;
+    margin-top: 5px;
+    font-weight: bold;
+    color: #bfbfbf;
+}
 #scroll_summary{
-	background-image : none; 
+	background-image : none;
 	background-color : honeydew;
+}
+#scroll_complexity{
+	background-image : none;
+	background-color : lavender;
 	margin-right : 10px !important;
 }
